# stmatrix

./: .gitignore  .gitmodules  Makefile  README.md  meson.build
meson/cross/: STM32G474RE.txt  arm.txt
src/: main.c  meson.build
