stmatrix_sources = [
    'main.c',
]

stmatrix = executable('stmatrix_app',
                       stmatrix_sources,
                       dependencies : [
                         stm_sdk,
                         freertos,
                         ],
                       install : false,
                       )
